[package]
name = "daftie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "signal", "time"] }
clap = { version = "4", features = ["derive"] }
teloxide = { version = "0.13", features = ["macros"] }
dotenvy = "0.15"
url = "2"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
